--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <body>
     <header class="cabeçalho">
         <div clas="container">
+            <input type="checkbox" id="menu" class="container__botao">
+            <label for="menu">
             <span class="cabeçalho__menu-hunburger container__imagem"></span>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__titulo">Categoria</li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+            </ul>
+
             <img src="img/Logo.svg" alt="logo da alurabook" class="container__imagem">
         </div>
         <div class="container">
