--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alurabook</title>
     <link rel="stylesheet" href="reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +23,19 @@
                 <li class="lista-menu__titulo">Categoria</li>
                 <li class="lista-menu__item">
                     <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-end</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Design & UX</a>
+                </li>
             </ul>
 
             <img src="img/Logo.svg" alt="logo da alurabook" class="container__imagem">
@@ -27,7 +44,7 @@
             <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
             <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
-        </div>
+            </div>
     </header>
 </body>
 </html>
