--- a/index.html
+++ b/index.html
@@ -51,5 +51,26 @@
         <p class="banner__texto">Encontre em nossa estante o que você prcisa para o seu desenvolvimento</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua própria leitura?">
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Novos Lançamentos</h2>
+
+        <div class="swiper">
+        <div class="swiper-pagination"></div>
+
+        <div clas="swiper-wrapper">
+            <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro sobre Apache Kafka"></div>
+            <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre Liderança"></div>
+            <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre Javascript"></div>
+            <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro sobre Front-end"></div>
+            <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre Portugol"></div>
+            <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="Livro sobre Acessibilidade"></div>
+       </div>
+
+       <div class="swiper-button-prev"></div>
+       <div class="swiper-button-next"></div>
+
+        </div>
+        
+    </section>
 </body>
 </html>
