--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
+    <link
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -51,6 +52,7 @@
         <p class="banner__texto">Encontre em nossa estante o que você prcisa para o seu desenvolvimento</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua própria leitura?">
     </section>
+
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos Lançamentos</h2>
 
@@ -70,7 +72,24 @@
        <div class="swiper-button-next"></div>
 
         </div>
-        
     </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+        
+
+    <script>
+        const swiper = new Swiper('.swiper',{
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination:{
+            el: '.swiper-pagination',
+            type: 'bullets',
+            }
+        });
+    </script>
+
+
+  
 </body>
 </html>
