--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
-    <link
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+
     <link rel="stylesheet" href="style.css">
+    <title>AluraBooks</title>
 </head>
 <body>
     <header class="cabeçalho">
@@ -79,17 +81,14 @@
         
 
     <script>
-        const swiper = new Swiper('.swiper',{
+        const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
             slidesPerView: 3,
-            pagination:{
+            pagination: {
             el: '.swiper-pagination',
             type: 'bullets',
             }
-        });
+            });
     </script>
-
-
-  
 </body>
 </html>
