--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="swiper">
         <div class="swiper-pagination"></div>
 
-        <div clas="swiper-wrapper">
+        <div class="swiper-wrapper">
             <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro sobre Apache Kafka"></div>
             <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre Liderança"></div>
             <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre Javascript"></div>
